# BayesianDataAnalysis

./: .gitignore  README.md  jupytext.toml
Assignments/100_Dice/: dice.md
Assignments/200_Lighthouse/: lighthouse.md  lighthouse.py  lighthouse.txt  lighthouse2d.md  lighthouse_2d.txt  lighthouse_MC.md
Assignments/300_ModelSelection/: model_selection.md
Assignments/400_Regression/: 100_quad_regression.md  regression.txt
Assignments/Lighthouse/: lighthouse.md  lighthouse_2d.txt  lighthouse_MC.md  lighthouse_MC_EN.md
Assignments/ModelSelection/: data.txt  model_selection.md
Assignments/Normal model/: normal_model_EN.md  normal_model_PL.md  two_normal_models.md  two_normal_models_EN.md  two_normal_models_PL.md
Assignments/RoundedData/: rounded_data.md  rounded_data_EN.md  rounded_data_PL.md
Lectures/000_Tensors/: 01_TensorsBasics.md  02_TensorsComputations.md  03_TensorsShapeManipulations.md  04_TensorsBroadcasting.md  cifar_10_1024.npy  grumpy.npy
Lectures/100_Probability/: 100_probability.md  200_discrete_random_variables.md  300_continuous_random_variables.md  continuous_random_variables.md  discrete_random_variables.md  probability.md
Lectures/200_Introduction/: 100_Introduction.md  200_Estimates_Errors.md  225_conjugate_priors.md  300_normal_distribution.md  BDA_Introduction.md  Errors.md  PosteriorDistribution.md  billiard.py  defaults.py  hdr.md  highest_density_region.md
Lectures/300_Models/: 100_signal_with_background.md  200_logistic_regression.md  (+7 more)
bda/: requirements.txt  setup.cfg
bda/src/bda/: __init__.py  hdr_plot.py  plotting.py  stats.py
(+14 files in other folders)
